syntax = "proto3";

package PlayGame;


service PlayGame {
  rpc GetTurn(TurnRequest) returns (stream TurnResponse);
}

message TurnRequest {
  string roomId = 1;
}

message TurnResponse {
  string Winner = 1;
}



